[gd_scene load_steps=26 format=2]

[ext_resource path="res://Visuals_demo/Fonts/Greconian.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Prefabs/RotatingCircles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Sign.gd" type="Script" id=3]
[ext_resource path="res://VagabondSong/AudioVagrabond.gd" type="Script" id=4]
[ext_resource path="res://VagabondSong/Core_Vagabond.gd" type="Script" id=5]
[ext_resource path="res://Visuals_demo/Finished/god1.png" type="Texture" id=6]
[ext_resource path="res://Visuals_demo/Finished/veselaszimes/dievsspid.png" type="Texture" id=7]
[ext_resource path="res://Visuals_demo/placeholders/Kokle-1.wav" type="AudioStream" id=8]
[ext_resource path="res://Prefabs/ToTreeAnim.tres" type="Animation" id=9]
[ext_resource path="res://Visuals_demo/Fonts/Greconian.ttf" type="DynamicFontData" id=128]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0, 0.0901961, 0.152941, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 128 )

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../TheGuide:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0, 0.0901961, 0.152941, 1, 0, 0.0901961, 0.152941, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="OpenSimplexNoise" id=6]
seed = 27
octaves = 5
period = 55.7
lacunarity = 0.78

[sub_resource type="NoiseTexture" id=7]
noise = SubResource( 6 )

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1220.17, -898.158 ), Vector2( 1220.17, -886.94 ), Vector2( 1220.17, -898.158 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1220.17, -898.158 ), Vector2( 1220.17, -886.94 ), Vector2( 1220.17, -886.94 ), Vector2( 1220.17, -898.158 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1220.17, -898.158 ), Vector2( 1220.17, -886.94 ), Vector2( 1220.17, -898.158 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, 0.0, 0.0, -10.0, 10.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=11]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Verse1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Verse2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Verse3:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Verse4:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Verse1:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 848.382, 386.019 ), Vector2( 694.099, 28 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Verse1:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Verse2:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 818.416, 463.943 ), Vector2( 776.539, 143.594 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Verse2:rect_rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Verse3:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 780.687, 543.495 ), Vector2( 822.186, 258.397 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Verse3:rect_rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Verse4:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 743.917, 602.943 ), Vector2( 822.186, 386.019 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Verse4:rect_rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Verse6:rect_position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 694.099, 651.175 ), Vector2( 694.099, 651.175 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Verse6:rect_rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Verse5:rect_position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 776.539, 510.648 ), Vector2( 776.539, 510.648 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Verse5:rect_rotation")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Verse1:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Verse5:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Verse6:modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Verse4:modulate")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Verse1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Verse1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 848.382, 386.019 ), Vector2( 848.382, 386.019 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Verse1:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Verse2:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Verse3:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Verse4:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Verse5:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 726.456, 578.926 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Verse5:rect_rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Verse6:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 694.099, 651.175 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Verse6:rect_rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Verse6:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Verse5:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("Verse2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Verse1:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("Verse2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Verse3:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Verse3:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Verse4:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Demo" type="Node2D"]

[node name="VersePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
script = ExtResource( 4 )

[node name="KoklePlayer" type="AudioStreamPlayer" parent="VersePlayer"]
volume_db = -10.0

[node name="DrumPlayer" type="AudioStreamPlayer" parent="VersePlayer"]
volume_db = -10.0

[node name="Button" type="Button" parent="VersePlayer"]
margin_left = 210.31
margin_top = 365.019
margin_right = 597.31
margin_bottom = 430.019
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.0901961, 0.152941, 1 )
custom_colors/font_color_hover = Color( 0.0470588, 0.203922, 0.301961, 1 )
custom_colors/font_color_pressed = Color( 0, 0.0901961, 0.152941, 1 )
text = "BACK TO THE TREE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="VersePlayer"]
autoplay = "Loaded_Scene"
anims/Loaded_Scene = SubResource( 2 )
anims/To_Menu = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 681.73, 382.185 )
scale = Vector2( 0.690576, 852.563 )
z_index = -2
texture = SubResource( 5 )

[node name="Sprite" type="Light2D" parent="Background"]
light_mask = 2
position = Vector2( 0, 2.23517e-08 )
scale = Vector2( 4, 0.00195313 )
texture = SubResource( 7 )
color = Color( 0.368627, 0.368627, 0.368627, 1 )
range_item_cull_mask = 2

[node name="RotatingCircles" parent="." instance=ExtResource( 2 )]

[node name="AnimatedSprite" parent="RotatingCircles/FlameCircle/Node2D" index="0"]
frame = 23

[node name="TheGuide" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 718.076, 423.519 )
scale = Vector2( 0.401177, 0.377041 )
z_index = -1
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="TheGuide"]
light_mask = 524288
position = Vector2( 1220.17, -898.158 )
texture = ExtResource( 7 )
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TheGuide/Sprite"]
anims/grow = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/shrink = SubResource( 10 )

[node name="Text" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Verse1" type="RichTextLabel" parent="Text"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 848.382
margin_top = 386.019
margin_right = 1304.38
margin_bottom = 525.019
custom_fonts/normal_font = SubResource( 11 )
text = "In the darkness 
i set out,
who shall my fellow 
be on my way?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Verse2" type="RichTextLabel" parent="Text"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 818.416
margin_top = 463.943
margin_right = 1274.42
margin_bottom = 602.943
custom_fonts/normal_font = SubResource( 11 )
text = "Dievs, the sky, 
shall my fellow be,
Laima, the one 
to show me the way."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Verse3" type="RichTextLabel" parent="Text"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 780.687
margin_top = 543.495
margin_right = 1236.69
margin_bottom = 682.495
custom_fonts/normal_font = SubResource( 11 )
text = "I began a long,
long jurney,
And from dievs i asked
for a cart to drive.
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Verse4" type="RichTextLabel" parent="Text"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 743.917
margin_top = 602.943
margin_right = 1199.92
margin_bottom = 741.943
custom_fonts/normal_font = SubResource( 11 )
text = "Silent was 
the cart of Dievs.
Dogs of Jods
couldnt it hear."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Text"]
anims/End = SubResource( 12 )
"anims/Verse 1" = SubResource( 13 )
anims/Verse2 = SubResource( 14 )
anims/Verse3 = SubResource( 15 )
anims/Verse4 = SubResource( 16 )
[connection signal="finished" from="VersePlayer" to="VersePlayer" method="_on_AudioStreamPlayer2D_finished"]
[connection signal="mouse_entered" from="VersePlayer/Button" to="VersePlayer" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VersePlayer/Button" to="VersePlayer" method="_on_Button_pressed"]
[connection signal="animation_finished" from="VersePlayer/AnimationPlayer" to="VersePlayer" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="TheGuide/Sprite/AnimationPlayer" to="TheGuide/Sprite" method="_on_AnimationPlayer_animation_finished"]

[editable path="RotatingCircles"]
